2012-12-08  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Command Contexts): @verb is not accepted in 
	simple text commands and sectioning commands.

2012-12-02  Karl Berry  <karl@gnu.org>

	* configure.ac (TERMLIB_VARIANTS): try tinfo first.
	Suggestion from Andreas Schwab, 02 Dec 2012 10:00:44.

2012-12-02  Colin Watson  <cjwatson@ubuntu.com>

	Build gnulib/lib directory in native-tools pass when
	cross-compiling (bug #37852).
	* Makefile.am (SUBDIRS) [TOOLS_ONLY]: Add gnulib/lib.

2012-12-02  Karl Berry  <karl@gnu.org>

	* install-info/tests/defs.in (TMPDIR): define if not defined.

2012-12-02  Patrice Dumas  <pertusus@free.fr>

	* configure.ac: remove gnulib module regex snippet, it is already in 
	gnulib/m4/gnulib-comp.m4.
	* configure.ac, tp/Texinfo/Convert/Unicode.pm: check that Encode is
	available, and use perl >= 5.7.3, required for Encode.  Report from 
	Stefano Lattarini.

2012-12-01  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix bug #37822 (incomplete redraw of screen).

	* info/display.c (display_scroll_display): Fix a "fencepost"
	error when scrolling down.
	* info/terminal.c: Improve conditional.

2012-12-01  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix cursor positioning after index searches (bug #37823).

	* info/window.h (WINDOW): Use size_t instead of int.
	(log_line_no): New member.
	(process_node_text): Change signature.
	* info/window.c (window_new_screen_size,recalculate_line_starts)
	(window_toggle_wrap,window_delete_window): Handle the
	log_line_no array.
	(calc_closure_expand): New static function.
	(_calc_line_starts): Update log_line_no. Use calc_closure_expand
	instead of the add_pointer_to_array macro.
	(calculate_line_starts): Fill in log_line_no.
	(window_log_to_phys_line): New function.
	(process_node_text): Keep track of logical line numbers.
	* info/display.c (display_node_text): Change signature.
	* info/indices.c (info_next_index_match): Convert logical line
	number to physical line.
