@@ -60,6 +60,7 @@ my %defaults = (
   'EXTENSION'            => 'xml',
   #'output_perl_encoding' => 'utf8',
   'OUTPUT_ENCODING_NAME' => 'utf-8',
+  'TEXINFO_DTD_VERSION'  => '5.00',
   'OUTFILE'              => undef,
   'SUBDIR'               => undef,
   'output_format'        => 'xml',
@@ -285,9 +286,13 @@ sub output($$)
       and $self->get_conf('OUTPUT_ENCODING_NAME') ne 'utf-8') {
     $encoding = " encoding=\"".$self->get_conf('OUTPUT_ENCODING_NAME')."\" ";
   }
+  my $texinfo_dtd_version = $self->get_conf('TEXINFO_DTD_VERSION');
+  if (!defined($texinfo_dtd_version)) {
+    $texinfo_dtd_version = '1.00';
+  }
 
   my $header =  "<?xml version=\"1.0\"${encoding}?>".'
-<!DOCTYPE texinfo PUBLIC "-//GNU//DTD TexinfoML V4.12//EN" "http://www.gnu.org/software/texinfo/dtd/4.12/texinfo.dtd">
+<!DOCTYPE texinfo PUBLIC "-//GNU//DTD TexinfoML V'.$texinfo_dtd_version.'//EN" "http://www.gnu.org/software/texinfo/dtd/'.$texinfo_dtd_version.'/texinfo.dtd">
 <texinfo xml:lang="' . $self->get_conf('documentlanguage') ."\">\n";
   if ($self->{'output_file'} ne '') {
     my $output_filename = $self->{'output_filename'};
