@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <!DOCTYPE catalog PUBLIC "-//OASIS/DTD Entity Resolution XML Catalog V1.0//EN" "http://www.oasis-open.org/committees/entity/release/1.0/catalog.dtd">
 <catalog xmlns="urn:oasis:names:tc:entity:xmlns:xml:catalog">
- <rewriteSystem systemIdStartString="http://www.gnu.org/software/texinfo/dtd/4.12/" rewritePrefix="file://@abs_top_srcdir@/util/" />
+ <rewriteSystem systemIdStartString="http://www.gnu.org/software/texinfo/dtd/@TEXINFO_DTD_VERSION@/" rewritePrefix="file://@abs_top_srcdir@/util/" />
 </catalog>
