@@ -1,3 +1,11 @@
+2012-12-10  Patrice Dumas  <pertusus@free.fr>
+
+	* configure.ac, tp/Makefile.am, tp/texi2any.pl, tp/Texinfo/Common.pm, 
+	tp/Texinfo/Convert/XML.pm, tp/maintain/catalog.xml.in, tp/t/test_utils.pl,
+	doc/texinfo.txi (Other Customization Variables):
+	Add a new configure variable TEXINFO_DTD_VERSION that holds the version
+	of the dtd.  Add the corresponding customization variable in tp/.
+
 2012-12-08  Patrice Dumas  <pertusus@free.fr>
 
 	* doc/texinfo.txi (Command Contexts): @verb is not accepted in 
